更新：修复XXX问题

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=yes">
-    <title>味享·共享评价菜单</title>
+    <title>独家菜单</title>
     <style>
         * {
             margin: 0;
@@ -447,7 +447,7 @@
         <!-- 首页 -->
         <div id="home-page" class="page active">
             <div class="header">
-                <h1>🍽️ 味享食评</h1>
+                <h1>🍽️ 杨波独家菜单</h1>
                 <div></div>
             </div>
             <div id="home-loading" class="loading">加载菜单中...</div>
