--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=yes">
-    <title>独家菜单 - 臻享版</title>
+    <title>独家菜单</title>
     <style>
         /* --- 🎨 颜色与变量定义 --- */
         :root {
@@ -173,6 +173,7 @@
                 width: 100%;
                 height: 150px;
                 object-fit: cover;
+                background: #f0e9e0;
             }
 
         .dish-info {
@@ -220,6 +221,7 @@
             border-radius: var(--border-radius);
             margin-bottom: 1.5rem;
             box-shadow: var(--shadow-soft);
+            background: #f0e9e0;
         }
 
         .detail-header-row {
@@ -600,7 +602,47 @@
         let currentCategory = '全部';
         let likedRecords = JSON.parse(localStorage.getItem('my_likes')) || [];
         let favoriteRecords = JSON.parse(localStorage.getItem('my_favorites')) || [];
-        let currentlyEditingId = null; // 记录当前正在修改哪个菜
+        let currentlyEditingId = null;
+
+        // --- 前端图片压缩函数 (黑科技) ---
+        function compressImage(file, maxWidth = 800, quality = 0.7) {
+            return new Promise((resolve, reject) => {
+                const reader = new FileReader();
+                reader.readAsDataURL(file);
+                reader.onload = (event) => {
+                    const img = new Image();
+                    img.src = event.target.result;
+                    img.onload = () => {
+                        let width = img.width;
+                        let height = img.height;
+
+                        // 只有当图片宽度大于我们设定的最大宽度时，才按比例缩小
+                        if (width > maxWidth) {
+                            height = Math.round((height * maxWidth) / width);
+                            width = maxWidth;
+                        }
+
+                        // 使用 canvas 重新绘制压缩后的图片
+                        const canvas = document.createElement('canvas');
+                        canvas.width = width;
+                        canvas.height = height;
+                        const ctx = canvas.getContext('2d');
+                        ctx.drawImage(img, 0, 0, width, height);
+
+                        // 将 canvas 导出为体积更小的 JPEG 格式文件
+                        canvas.toBlob((blob) => {
+                            const compressedFile = new File([blob], "compressed_" + file.name, {
+                                type: 'image/jpeg',
+                                lastModified: Date.now(),
+                            });
+                            resolve(compressedFile);
+                        }, 'image/jpeg', quality);
+                    };
+                    img.onerror = (error) => reject(error);
+                };
+                reader.onerror = (error) => reject(error);
+            });
+        }
 
         // --- 初始化数据 ---
         async function loadDishes() {
@@ -677,7 +719,7 @@
             } else {
                 grid.innerHTML = list.map(d => `
                         <div class="dish-card" onclick="showDetail(${d.id})">
-                            <img src="${d.image || 'https://via.placeholder.com/150'}">
+                            <img src="${d.image || 'https://via.placeholder.com/150'}" loading="lazy" alt="${d.name}">
                             <div class="dish-info">
                                 <div class="dish-name">${d.name}</div>
                                 <div class="card-stats">
@@ -691,7 +733,7 @@
             document.getElementById('home-loading').style.display = 'none';
         }
 
-        // --- 详情与评价 (省略了重复的阅读部分，保持原样) ---
+        // --- 详情与评价 ---
         async function showDetail(id) {
             const dish = dishes.find(d => d.id === id);
             switchPage('detail');
@@ -705,7 +747,7 @@
             const isFav = favoriteRecords.includes(dish.id);
 
             document.getElementById('detail-content').innerHTML = `
-                    <img src="${dish.image}" class="detail-cover">
+                    <img src="${dish.image}" class="detail-cover" loading="lazy">
                     <div class="detail-header-row">
                         <div class="detail-title">${dish.name}</div>
                         <div class="action-btns">
@@ -783,28 +825,31 @@
             showDetail(id);
         }
 
-        // --- 管理逻辑：新增 ---
+        // --- 管理逻辑：新增 (集成压缩功能) ---
         async function submitNewDish() {
             const name = document.getElementById('add-name').value;
             const category = document.getElementById('add-cat').value;
             const description = document.getElementById('add-desc').value;
             const fileInput = document.getElementById('add-img-file');
-            const file = fileInput.files[0];
 
-            if (!name || !file) return alert("菜品名称和美食图片缺一不可哦！");
+            if (!name || fileInput.files.length === 0) return alert("菜品名称和美食图片缺一不可哦！");
 
             const btn = document.querySelector('.admin-section .submit-btn');
-            btn.textContent = '厨房正在烹饪中...';
+            btn.textContent = '图片压缩上传中...';
             btn.disabled = true;
 
             try {
-                const fileExt = file.name.split('.').pop();
-                const fileName = `${Date.now()}.${fileExt}`;
+                // 1. 获取原图并进行前端压缩
+                let rawFile = fileInput.files[0];
+                let file = await compressImage(rawFile, 800, 0.7); // 宽度限制 800px，画质 70%
+
+                const fileName = `${Date.now()}.jpg`; // 压缩后统一输出为 jpg
                 const bucketName = 'dishes';
 
+                // 2. 上传压缩后的图片
                 const uploadRes = await fetch(`https://fwmxyvoekvcofbttfaba.supabase.co/storage/v1/object/${bucketName}/${fileName}`, {
                     method: 'POST',
-                    headers: { 'apikey': API_KEY, 'Authorization': `Bearer ${API_KEY}`, 'Content-Type': file.type },
+                    headers: { 'apikey': API_KEY, 'Authorization': `Bearer ${API_KEY}`, 'Content-Type': 'image/jpeg' },
                     body: file
                 });
 
@@ -812,6 +857,7 @@
 
                 const imageUrl = `https://fwmxyvoekvcofbttfaba.supabase.co/storage/v1/object/public/${bucketName}/${fileName}`;
 
+                // 3. 写入数据库
                 const dbRes = await fetch(`${API_URL}/dishes`, {
                     method: 'POST',
                     headers,
@@ -831,19 +877,17 @@
             }
         }
 
-        // --- 🌟 管理逻辑：全能修改弹窗 ---
+        // --- 管理逻辑：修改弹窗 (集成压缩功能) ---
         function openEditModal(id) {
             const dish = dishes.find(d => d.id === id);
             if (!dish) return;
             currentlyEditingId = id;
 
-            // 填入旧数据
             document.getElementById('edit-name').value = dish.name;
             document.getElementById('edit-cat').value = dish.category || '';
             document.getElementById('edit-desc').value = dish.description || '';
-            document.getElementById('edit-img-file').value = ''; // 清空文件选择器
+            document.getElementById('edit-img-file').value = '';
 
-            // 显示弹窗
             document.getElementById('edit-modal').style.display = 'flex';
         }
 
@@ -868,18 +912,20 @@
             btn.disabled = true;
 
             try {
-                let imageUrl = dish.image; // 默认使用原来的图片
+                let imageUrl = dish.image;
 
-                // 如果用户选择了新图片，就上传新图片并替换链接
+                // 如果选择了新图片，先压缩，再上传
                 if (fileInput.files.length > 0) {
-                    const file = fileInput.files[0];
-                    const fileExt = file.name.split('.').pop();
-                    const fileName = `${Date.now()}.${fileExt}`;
+                    btn.textContent = '压缩图片中...';
+                    let rawFile = fileInput.files[0];
+                    let file = await compressImage(rawFile, 800, 0.7);
+
+                    const fileName = `${Date.now()}.jpg`;
                     const bucketName = 'dishes';
 
                     const uploadRes = await fetch(`https://fwmxyvoekvcofbttfaba.supabase.co/storage/v1/object/${bucketName}/${fileName}`, {
                         method: 'POST',
-                        headers: { 'apikey': API_KEY, 'Authorization': `Bearer ${API_KEY}`, 'Content-Type': file.type },
+                        headers: { 'apikey': API_KEY, 'Authorization': `Bearer ${API_KEY}`, 'Content-Type': 'image/jpeg' },
                         body: file
                     });
 
@@ -887,7 +933,7 @@
                     imageUrl = `https://fwmxyvoekvcofbttfaba.supabase.co/storage/v1/object/public/${bucketName}/${fileName}`;
                 }
 
-                // 统一提交所有修改到数据库
+                btn.textContent = '更新数据库...';
                 const res = await fetch(`${API_URL}/dishes?id=eq.${currentlyEditingId}`, {
                     method: 'PATCH',
                     headers,
@@ -896,7 +942,7 @@
 
                 if (res.ok) {
                     alert("✅ 修改成功！");
-                    location.reload(); // 刷新页面同步最新数据
+                    location.reload();
                 } else {
                     throw new Error("更新数据库失败");
                 }
