更新：修复XXX问题

--- a/index.html
+++ b/index.html
@@ -674,7 +674,7 @@
     <div class="app-container">
         <div id="home-page" class="page active">
             <div class="header">
-                <h1 id="page-main-title">🍽️ 臻享私房菜</h1>
+                <h1 id="page-main-title">🍽️ 杨家私房菜</h1>
             </div>
             <div class="category-bar" id="category-bar"></div>
             <div id="home-loading" class="loading">美味加载中...</div>
@@ -695,7 +695,7 @@
             <div class="header"><h1>🤖 AI 厨神助手</h1></div>
             <div class="chat-container">
                 <div class="chat-box" id="chat-box">
-                    <div class="chat-msg ai">你好！我是本店的 AI 厨神。想知道菜怎么做？或者是拍一张食材/菜品的照片发给我，我帮你识别并生成专属菜谱！</div>
+                    <div class="chat-msg ai">你好！我是AI 厨神。想知道菜怎么做？或者是拍一张食材/菜品的照片发给我，我帮你识别并生成专属菜谱！</div>
                 </div>
                 <div class="chat-input-wrapper">
                     <div class="chat-img-preview" id="chat-img-preview-container">
