更新：修复XXX问题

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=yes">
-    <title>独家菜单 - 臻享版</title>
+    <title>独家菜单</title>
     <style>
         /* --- 🎨 颜色与变量定义 --- */
         :root {
@@ -833,7 +833,7 @@
         }
 
         function goHome() {
-            currentCategory = '全部'; document.getElementById('page-main-title').textContent = '🍽️ 臻享私房菜';
+            currentCategory = '全部'; document.getElementById('page-main-title').textContent = '🍽️ 杨家私房菜';
             switchPage('home'); renderCategories(); renderHome();
         }
 
